# cav4-rest-python

./: .gitignore  README.md  app.py  pyproject.toml
certs/: README.md
docs/: oauth-oidc.md
src/cav4_rest_python/: __about__.py  __init__.py  oidc_server.py
src/cav4_rest_python/streamlit_app/: README.md  oidc_login.py
src/cav4_rest_python/website/: app.py  oauth2.py  routes.py  settings.py
src/cav4_rest_python/website/templates/: create_client.html
